# Alien-Protocol

.github/workflows/: contract.yml
contracts/oracle-adapter/: Cargo.toml
contracts/oracle-adapter/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/oracle-adapter/src/oracle/: mod.rs  pull.rs  push.rs  storage.rs
contracts/oracle-adapter/src/tests/: mod.rs  test_get_price_or_fail.rs  test_pause.rs  test_redstone.rs  test_staleness.rs
contracts/oracle-adapter/test_snapshots/test/: test_get_admin_returns_updated_admin_after_set_admin.1.json  test_get_staleness_threshold_does_not_mutate_state.1.json  test_is_price_fresh_at_exact_threshold.1.json  test_is_price_fresh_stale.1.json  test_is_price_fresh_within_threshold.1.json  test_old_admin_cannot_call_set_price_after_transfer.1.json  test_set_admin_success.1.json  test_set_price_non_admin_fails.1.json  test_set_staleness_threshold_affects_freshness.1.json  test_set_staleness_threshold_emits_event.1.json  test_set_staleness_threshold_success.1.json
contracts/oracle-adapter/test_snapshots/tests/: test_get_admin_does_not_mutate_state.1.json  test_get_admin_returns_updated_admin_after_set_admin.1.json  test_get_price_after_update.1.json  test_get_price_does_not_mutate_state.1.json  test_get_price_multiple_assets.1.json  test_initialize_success.1.json  test_is_price_fresh_at_exact_threshold.1.json  test_is_price_fresh_stale.1.json  test_is_price_fresh_within_threshold.1.json  test_set_admin_success.1.json  test_set_price_different_assets.1.json  test_set_price_non_admin_fails.1.json
(+89 files in other folders)
