[package]
name = "oracle-adapter"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
redstone = { git = "https://github.com/redstone-finance/rust-sdk", tag = "3.1.0-pre1", default-features = false, features = ["soroban"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

